--- a/app/webroot/css/jquery/cust_select_box.css
+++ b/app/webroot/css/jquery/cust_select_box.css
@@ -43,7 +43,6 @@
   list-style: none;
   padding:0;
   margin:0;
-  font-family: arial,helvetica,san-serif;
   color:#333;
   font-size: 12px;
   cursor: pointer;
